Renamed DP APIs to be more intuitive
